inscription/suppression/modification par admin possible

--- a/gestionEcole/nbproject/project.properties
+++ b/gestionEcole/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/gestionEcole.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsch-0.1.51.jar=/Users/serina/Desktop/ING3 - PARIS/POO Java/Projet JAVA/lib/jsch-0.1.51.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=/Users/serina/Desktop/ING3 - PARIS/POO Java/Projet JAVA/lib/mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.jsch-0.1.51.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
