ajout graphique non relié encore

--- a/gestionEcole/nbproject/project.properties
+++ b/gestionEcole/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=gestionEcole
+application.vendor=dePlanta
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,23 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/gestionEcole.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jsch-0.1.51.jar=/Users/serina/Desktop/ING3 - PARIS/POO Java/Projet JAVA/lib/jsch-0.1.51.jar
+file.reference.jsch-0.1.51.jar-1=/Users/dePlanta/NetBeansProjects/gestionEcole-master/lib/jsch-0.1.51.jar
+file.reference.jsch-0.1.51.jar-2=../lib/jsch-0.1.51.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=/Users/serina/Desktop/ING3 - PARIS/POO Java/Projet JAVA/lib/mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar-1=/Users/dePlanta/NetBeansProjects/gestionEcole-master/lib/mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar-2=../lib/mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.jsch-0.1.51.jar}
+    ${file.reference.jsch-0.1.51.jar}:\
+    ${file.reference.jsch-0.1.51.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar-1}:\
+    ${file.reference.jsch-0.1.51.jar-2}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
