--- a/gestionEcole/nbproject/private/private.properties
+++ b/gestionEcole/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/serina/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\Hugo\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
